# cpp-quant-research

./: .gitignore  CMakeLists.txt  README.md  build.ninja  main.cpp
include/MarketData/: MarketDataProcessor.h
include/Signal/: SignalGenerator.h
src/: CMakeLists.txt
src/MarketData/: CMakeLists.txt  MarketDataProcessor.cpp
src/Signal/: CMakeLists.txt  SignalGenerator.cpp
